--- a/src/Components/Pages/Home/home.css
+++ b/src/Components/Pages/Home/home.css
@@ -48,7 +48,7 @@ body{
     height: 25px;
     border: none;
     color: white;
-    background-color: rgb(255,0,68);
+    background-color: rgb(60, 255, 0);
     border-radius: 4px;
     box-shadow: inset 0 0 0 0 #f9e506;
     transition: ease-out 0.3s;
