--- a/src/Components/Pages/Favorites/favorites.css
+++ b/src/Components/Pages/Favorites/favorites.css
@@ -5,11 +5,21 @@
  }
  .favorite-cards{
      display: flex;
-     justify-content: space-between;
+     /* justify-content: space-between; */
+     flex-direction: column;
      align-self: center;
     padding: 20px;
+    margin-top: 50px;
  }
  .favorite-headline{
+     display: flex;
+     justify-content: center;
+     padding: 10px;
+     box-shadow: 5px 10px 18px #888888;
+     border-radius: 15px;
+     position: fixed;
      font-weight: bold;
      font-family:Arial, Helvetica, sans-serif;
+     border: solid 1px black;
+     width: 300px;
  }
